edition = "2023";

import "common.proto";
import "scenario.proto";

package aim;

message KillTargetEvent {
  int32 target_id = 1;
}

message RemoveTargetEvent {
  int32 target_id = 1;
}

message ShotFiredEvent {}

message AddTargetEvent {
  int32 target_id = 1;
  StoredVec3 position = 2;
  float radius = 3;
}

message MoveLinearTargetEvent {
  int32 target_id = 1;
  StoredVec3 direction = 2;
  float distance_per_frame = 3;
}

message ReplayEvent {
  int32 frame_number = 1;
  oneof type {
    KillTargetEvent kill_target = 2;
    RemoveTargetEvent remove_target = 3;
    AddTargetEvent add_target = 4;
    ShotFiredEvent shot_fired = 5;
    MoveLinearTargetEvent move_linear_target = 6;
  }
}

message Replay {
  Room room = 1;
  int32 replay_fps = 2;
  repeated float pitch_yaws = 3;
  repeated ReplayEvent events = 4;
}
